@@ -3,7 +3,7 @@
  * CONFIG.C - Configuration input and verification routines for Nagios
  *
  * Copyright (c) 1999-2006 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 10-26-2006
+ * Last Modified: 10-27-2006
  *
  * License:
  *
@@ -160,6 +160,9 @@ extern double   low_host_flap_threshold;
 extern double   high_host_flap_threshold;
 
 extern int      use_large_installation_tweaks;
+
+extern int      enable_embedded_perl;
+extern int      use_embedded_perl_implicitly;
 
 extern int      date_format;
 
@@ -1462,7 +1465,7 @@ int read_main_config_file(char *main_config_file){
 		else if(!strcmp(variable,"use_large_installation_tweaks")){
 
 			if(strlen(value)!=1||value[0]<'0'||value[0]>'1'){
-				strcpy(error_message,"Illegal value foruse_large_installation_tweaks ");
+				strcpy(error_message,"Illegal value for use_large_installation_tweaks ");
 				error=TRUE;
 				break;
 			        }
@@ -1471,6 +1474,36 @@ int read_main_config_file(char *main_config_file){
 
 #ifdef DEBUG1
 			printf("\t\tuse_large_installation_tweaks set to %s\n",(use_large_installation_tweaks==TRUE)?"TRUE":"FALSE");
+#endif
+		        }
+
+		else if(!strcmp(variable,"enable_embedded_perl")){
+
+			if(strlen(value)!=1||value[0]<'0'||value[0]>'1'){
+				strcpy(error_message,"Illegal value for enable_embedded_perl");
+				error=TRUE;
+				break;
+			        }
+
+			enable_embedded_perl=(atoi(value)>0)?TRUE:FALSE;
+
+#ifdef DEBUG1
+			printf("\t\tenable_embedded_perl set to %s\n",(enable_embedded_perl==TRUE)?"TRUE":"FALSE");
+#endif
+		        }
+
+		else if(!strcmp(variable,"use_embedded_perl_implicitly")){
+
+			if(strlen(value)!=1||value[0]<'0'||value[0]>'1'){
+				strcpy(error_message,"Illegal value for use_embedded_perl_implicitly");
+				error=TRUE;
+				break;
+			        }
+
+			use_embedded_perl_implicitly=(atoi(value)>0)?TRUE:FALSE;
+
+#ifdef DEBUG1
+			printf("\t\tuse_embedded_perl_implicitly set to %s\n",(use_embedded_perl_implicitly==TRUE)?"TRUE":"FALSE");
 #endif
 		        }
 
